tests/parser/bad/exps/exp_t-let-id-colon-with.scilexp
let a : bool = True in a
